--- a/css/style.css
+++ b/css/style.css
@@ -37,9 +37,33 @@ body {
 .col-3 {
 	width: 25%;
 }
+.col-4{
+    width: 75%;
+	
+	
+}
+.search {
+	border: 1px solid #2c71b8;
+	position: relative;
+
+}
+.search a{
+	display: block;
+	padding-left: 20px;
+	height: 45px;
+	line-height: 45px;
+	color: #2c71b8;
+	font-size: 21px;
+	text-decoration: none;
+	cursor: pointer;
+}
+.col-5{
+    width: 25%;
+}
 .col-6 {
 	width: 50%;
 }
+
 .col-12 {
 	width: 100%;
 }
@@ -63,4 +87,35 @@ body {
 .menu a:hover{
     background-color: #2c71b8;
     color: #fff;
+}
+.img__search{
+	position: absolute;
+	top: 5px;
+	right: 10px;
+	padding: 12px;
+	background: #2c71b8;
+}
+.basket{
+	position: relative;
+	
+}
+.basket{
+	background-color: #fff;
+	height: 45px;
+	text-align: center;
+	line-height: 45px;
+}
+.basket__count{
+	position: absolute;
+	top: -15px;
+	left: -10px;
+	height: 20px;
+	width: 20px;
+text-decoration: none;
+	background-color: #2c71b8;
+	color: #fff;
+	border-radius: 50%;
+	font-size: 12px;
+	text-align: center;
+	line-height: 20px;
 }
