--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ body {
 .header {
 	background: rgba(255, 255, 255, 0.75);
 	padding: 25px 0;
+	position: sticky;
 }
 .row {
 	margin: 0 -15px;
@@ -37,28 +38,12 @@ body {
 .col-3 {
 	width: 25%;
 }
-.col-4{
-    width: 75%;
-	
-	
+.col-4 {
+	width: 75%;
 }
-.search {
-	border: 1px solid #2c71b8;
-	position: relative;
 
-}
-.search a{
-	display: block;
-	padding-left: 20px;
-	height: 45px;
-	line-height: 45px;
-	color: #2c71b8;
-	font-size: 21px;
-	text-decoration: none;
-	cursor: pointer;
-}
-.col-5{
-    width: 25%;
+.col-5 {
+	width: 25%;
 }
 .col-6 {
 	width: 50%;
@@ -67,12 +52,12 @@ body {
 .col-12 {
 	width: 100%;
 }
-.menu li {
+.menu .menu__items {
 	float: left;
 	width: 25%;
 	border-left: 1px solid #2c71b8;
 }
-.menu li :last-child {
+.menu .menu__items:last-child {
 	border-right: 1px solid #2c71b8;
 }
 .menu a {
@@ -84,38 +69,86 @@ body {
 	color: #2c71b8;
 	font-size: 21px;
 }
-.menu a:hover{
-    background-color: #2c71b8;
-    color: #fff;
+.menu a:hover {
+	background-color: #2c71b8;
+	color: #fff;
+	display: block;
 }
-.img__search{
+.search {
+	border: 1px solid #2c71b8;
+	position: relative;
+}
+.search input {
+	width: 130px;
+	height: 45px;
+	padding: 2px 0;
+	padding-left: 5px;
+	font-size: 21px;
+	cursor: pointer;
+	border: none;
+	background: none;
+	outline: 0;
+	color: #2c71b8;
+}
+.search input:focus {
+	color: #2c71b8;
+}
+
+.img__search {
 	position: absolute;
 	top: 5px;
 	right: 10px;
 	padding: 12px;
 	background: #2c71b8;
+	cursor: pointer;
 }
-.basket{
+.basket {
 	position: relative;
-	
 }
-.basket{
+.basket {
 	background-color: #fff;
 	height: 45px;
 	text-align: center;
 	line-height: 45px;
+	cursor: pointer;
 }
-.basket__count{
+.basket__count {
 	position: absolute;
 	top: -15px;
 	left: -10px;
 	height: 20px;
 	width: 20px;
-text-decoration: none;
+	text-decoration: none;
 	background-color: #2c71b8;
 	color: #fff;
 	border-radius: 50%;
 	font-size: 12px;
 	text-align: center;
 	line-height: 20px;
+}
+
+.sub__menu {
+	display: none;
+	
+}
+.menu .menu__items:hover .sub__menu {
+	display: block;
+
+}
+.sub__menu .items {
+	width: 285px;
+	background-color: #2c71b8;
+}
+.sub__menu a {
+	width: 100%;
+	padding-left: 5px;
+	color: #fff;
+	font-weight: 600;
+	text-align: left;
+	display: block;
+}
+.sub__menu a:hover {
+	background-color: white;
+	color: #2c71b8;
+	display: block;
 }
