--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,9 @@
 * {
 	box-sizing: border-box;
 }
+::-webkit-input-placeholder {
+	color: #2c71b8;
+}
 
 body {
 	font-family: 'Roboto', sans-serif;
@@ -38,7 +41,7 @@ body {
 .col-3 {
 	width: 25%;
 }
-.col-4 {
+.col-9 {
 	width: 75%;
 }
 
@@ -76,7 +79,7 @@ body {
 }
 .search {
 	border: 1px solid #2c71b8;
-	position: relative;
+	/* position: relative; */
 }
 .search input {
 	width: 130px;
@@ -88,31 +91,39 @@ body {
 	border: none;
 	background: none;
 	outline: 0;
-	color: #2c71b8;
 }
 .search input:focus {
 	color: #2c71b8;
 }
-
-.img__search {
-	position: absolute;
-	top: 5px;
-	right: 10px;
-	padding: 12px;
-	background: #2c71b8;
+.search button {
+	background-color: #2c71b8;
+	background-image: url('../img/search.png');
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: auto, cover;
+	width: 30px;
+	height: 30px;
+	float: right;
+	border: none;
+	margin-right: 10px;
+	margin-top: 8px;
 	cursor: pointer;
 }
-.basket {
-	position: relative;
-}
-.basket {
+
+.card {
 	background-color: #fff;
 	height: 45px;
 	text-align: center;
 	line-height: 45px;
 	cursor: pointer;
+	position: relative;
+	background-image: url('../img/basket.png');
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: auto, cover;
+	cursor: pointer;
 }
-.basket__count {
+.card__count {
 	position: absolute;
 	top: -15px;
 	left: -10px;
@@ -127,11 +138,11 @@ body {
 	line-height: 20px;
 }
 
-.menu__items .sub__menu{
-display: none;
+.menu__items .sub__menu {
+	display: none;
 }
 .menu__items:hover .sub__menu {
-display: block;
+	display: block;
 }
 .sub__menu .items {
 	width: 285px;
