--- a/css/style.css
+++ b/css/style.css
@@ -58,12 +58,13 @@ body {
 .menu .menu__items {
 	float: left;
 	width: 25%;
+	position: relative;
 	border-left: 1px solid #2c71b8;
 }
-.menu .menu__items:last-child {
+ .menu__items:last-child {
 	border-right: 1px solid #2c71b8;
 }
-.menu a {
+ .menu__items a {
 	display: block;
 	height: 50px;
 	text-align: center;
@@ -72,14 +73,15 @@ body {
 	color: #2c71b8;
 	font-size: 21px;
 }
-.menu a:hover {
+.menu__items a:hover {
 	background-color: #2c71b8;
 	color: #fff;
 	display: block;
 }
+
 .search {
 	border: 1px solid #2c71b8;
-	/* position: relative; */
+	
 }
 .search input {
 	width: 130px;
@@ -143,20 +145,26 @@ body {
 }
 .menu__items:hover .sub__menu {
 	display: block;
+	padding-top: 40px;
+	position: relative;
+	top: -15px;
 }
-.sub__menu .items {
+ .items {
 	width: 285px;
 	background-color: #2c71b8;
+	
 }
-.sub__menu a {
+.items a {
 	width: 100%;
-	padding-left: 5px;
 	color: #fff;
 	font-weight: 600;
 	text-align: left;
 	display: block;
+	padding: 12px;
+	text-decoration: none;
+	font-size: 21px;
 }
-.sub__menu a:hover {
+.items a:hover {
 	background-color: white;
 	color: #2c71b8;
 	display: block;
