--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 }
 
 body {
+	min-width: 1200px;
 	font-family: 'Roboto', sans-serif;
 	background-image: url('../img/patt.png');
 }
@@ -18,6 +19,7 @@ body {
 	background: rgba(255, 255, 255, 0.75);
 	padding: 25px 0;
 	height: 100px;
+	
 }
 .row {
 	margin: 0 -15px;
@@ -73,10 +75,10 @@ body {
 	color: #2c71b8;
 	font-size: 21px;
 }
-.menu__items a:hover {
+.menu__items:hover > a {
 	background-color: #2c71b8;
 	color: #fff;
-	display: block;
+	
 }
 
 .search {
@@ -138,20 +140,24 @@ body {
 	text-align: center;
 	line-height: 20px;
 }
-
-.menu__items .sub__menu {
+.sub__menu{
+	position: absolute;
 	display: none;
+	width: 203%;
 }
+.menu__items{
+	position: relative;
+}
+
 .menu__items:hover .sub__menu  {
 	display: block;
 	padding-top: 40px;
-	position: fixed;
+	position: absolute;
 	border: none;
-	top: 60px;
+	top: 35px;
 	z-index: 10;
 }
 .items {
-	width: 285px;
 	background-color: #2c71b8;
 }
 .items a {
