--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 * {
 	box-sizing: border-box;
 }
+
 ::-webkit-input-placeholder {
 	color: #2c71b8;
 }
@@ -10,62 +11,83 @@ body {
 	font-family: 'Roboto', sans-serif;
 	background-image: url('../img/patt.png');
 }
+
 .container {
 	width: 1200px;
 	margin: 0 auto;
 	padding: 0 15px;
 }
+
 .header {
 	background: rgba(255, 255, 255, 0.75);
 	padding: 25px 0;
 	height: 100px;
-	
+
 }
+
 .row {
 	margin: 0 -15px;
 }
+
 .row::after,
 .menu::after {
 	content: '';
 	display: block;
 	clear: both;
 }
+
 [class*='col-'] {
 	float: left;
 	padding: 0 15px;
 }
+
 .col-1 {
 	width: 8.3333%;
 }
+
 .col-2 {
 	width: 16.6667%;
 }
+
 .col-3 {
 	width: 25%;
 }
-.col-9 {
-	width: 75%;
+
+.col-4 {
+	width: 33.33333%;
 }
 
 .col-5 {
 	width: 25%;
 }
+
 .col-6 {
 	width: 50%;
+}
+
+.col-8 {
+	width: 66.66667%;
+}
+
+.col-9 {
+	width: 75%;
 }
 
 .col-12 {
 	width: 100%;
 }
+
 .menu .menu__items {
 	float: left;
 	width: 25%;
 	position: relative;
 	border-left: 1px solid #2c71b8;
 }
+
 .menu__items:last-child {
 	border-right: 1px solid #2c71b8;
 }
+
 .menu__items a {
 	display: block;
 	height: 50px;
@@ -75,15 +97,17 @@ body {
 	color: #2c71b8;
 	font-size: 21px;
 }
-.menu__items:hover > a {
+
+.menu__items:hover>a {
 	background-color: #2c71b8;
 	color: #fff;
-	
+
 }
 
 .search {
 	border: 1px solid #2c71b8;
 }
+
 .search input {
 	width: 130px;
 	height: 45px;
@@ -95,9 +119,11 @@ body {
 	background: none;
 	outline: 0;
 }
+
 .search input:focus {
 	color: #2c71b8;
 }
+
 .search button {
 	background-color: #2c71b8;
 	background-image: url('../img/search.png');
@@ -126,6 +152,7 @@ body {
 	background-size: auto, cover;
 	cursor: pointer;
 }
+
 .card__count {
 	position: absolute;
 	top: -15px;
@@ -140,25 +167,29 @@ body {
 	text-align: center;
 	line-height: 20px;
 }
-.sub__menu{
+
+.sub__menu {
 	position: absolute;
 	display: none;
 	width: 201%;
 }
-.menu__items{
+
+.menu__items {
 	position: relative;
 }
 
-.menu__items:hover .sub__menu  {
+.menu__items:hover .sub__menu {
 	display: block;
 	position: absolute;
 	border: none;
 	top: 50px;
 	z-index: 10;
 }
+
 .items {
 	background-color: #2c71b8;
 }
+
 .items a {
 	width: 100%;
 	color: #fff;
@@ -169,26 +200,273 @@ body {
 	text-decoration: none;
 	font-size: 21px;
 }
+
 .items a:hover {
 	background-color: white;
 	color: #2c71b8;
 	display: block;
 }
+
 /* slider */
 .swiper {
-  width: 100%;
-min-height: 400px;
-  background-color: #235993a9;
-  line-height: 400px;
+	width: 100%;
+	min-height: 400px;
+	background-color: #235993a9;
+	line-height: 400px;
 }
-.swiper-slide{
+
+.swiper-slide {
 	color: #fff;
 	font-size: 100px;
 	text-align: center;
 }
+
 .swiper-button-prev,
-.swiper-button-next{
+.swiper-button-next {
 	margin: 0 170px;
 	transition: .1s;
 
+}
+.breadcrumbs{
+	color: #ffffff;
+		font-size: 21px;
+		font-weight: 100;
+		margin-bottom: 35px;
+	}
+
+
+.title {
+	color: #ffffff;
+	font-size: 48px;
+	font-weight: 700;
+}
+
+.filter {
+	width: 270px;
+	height: 845px;
+	color: white;
+	font-size: 21px;
+	background-color: #acc1dd4d;
+}
+
+.filter p {
+	font-weight: bold;
+	margin-bottom: 10px;
+}
+
+.input+label {
+	display: inline-flex;
+	align-items: center;
+	user-select: none;
+	margin-bottom: 5px;
+
+}
+
+.input+label::before {
+	margin-right: 10px;
+	margin-top: 10px;
+	margin-bottom: 12px;
+	margin-right: 10px;
+	margin-left: 0px;
+
+}
+
+label {
+	cursor: pointer;
+}
+
+label::before {
+	content: "";
+
+	width: 10px;
+	height: 10px;
+	border: 1px solid white;
+	cursor: pointer;
+
+}
+
+.input[type="checkbox"]:checked+label::before {
+	background-color: white;
+
+}
+
+.input[type="checkbox"] {
+	display: none;
+}
+
+.device-type {
+	height: 160px;
+	padding-top: 32px;
+	padding-left: 30px;
+}
+
+.color {
+	height: 220px;
+	padding-left: 30px;
+}
+
+.color p {
+	margin-top: 40px;
+}
+
+.ram {
+	height: 225px;
+	padding-left: 30px;
+}
+
+.ram p {
+	margin-top: 50px;
+}
+
+.more-options {
+	height: 20px;
+	text-align: center;
+	margin-bottom: 35px;
+	margin-top: 15px;
+}
+
+.filter-submit {
+	width: 210px;
+	height: 50px;
+	display: block;
+	margin: 0 auto;
+	background-color: #2c71b8;
+	color: white;
+	font-size: 21px;
+	font-weight: bold;
+	border: 1px solid #ffff;
+	cursor: pointer;
+}
+
+.filter-submit:hover {
+	background-color: white;
+	color: #2c71b8;
+}
+
+.product {
+	margin-top: 30px;
+
+	width: 268px;
+	height: 650px;
+	background-color: rgba(44, 113, 184, 0.75);
+	position: relative;
+	border: solid 1px #ffff;
+}
+
+.product-image {
+	opacity: 0.749;
+	width: 267px;
+	height: 180px;
+	background-color: rgba(255, 255, 255, 0.7490196078431373);
+	position: relative;
+}
+
+.prd-img {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+
+.zoom {
+	width: 30px;
+	height: 30px;
+	position: absolute;
+	right: 10px;
+	top: 10px;
+	background-image: url(../img/fullblue.png);
+	background-position: center center;
+	background-repeat: no-repeat;
+	border: 1px solid #2c71b8;
+
+}
+
+.zoom:hover {
+	background-image: url(../img/full.png);
+	background-color: #2c71b8;
+}
+
+.like {
+	width: 30px;
+	height: 30px;
+	position: absolute;
+	right: 10px;
+	top: 50px;
+	background-image: url(../img/heart.png);
+	background-position: center center;
+	background-repeat: no-repeat;
+	border: 1px solid #2c71b8;
+
+}
+
+.like:hover {
+	background-image: url(../img/whiteheart.png);
+	background-color: #2c71b8;
+
+}
+
+.product-body {
+	color: #ffffff;
+	margin-left: 15px;
+}
+
+.product-name {
+	margin: 15px 0 20px;
+	font-size: 30px;
+	font-weight: 700;
+}
+
+.product-descriprion {
+	margin-bottom: 10px;
+	font-size: 21px;
+	font-weight: lighter;
+}
+
+.product-features {
+	font-size: 21px;
+	font-weight: light;
+	margin-bottom: 20px;
+}
+
+.product-features span {
+	font-weight: 700;
+	font-size: 21px;
+}
+
+.product-price {
+	text-align: center;
+	font-size: 48px;
+	font-weight: 700;
+	margin-bottom: 30px;
+}
+
+.product-price sup {
+	font-size: 24px;
+
+}
+
+.btn-big {
+	width: 210px;
+	height: 50px;
+	line-height: 50px;
+	color: white;
+	background-color: #2c71b8;
+	border: solid 1px white;
+	text-align: center;
+	margin-left: 12px;
+	margin-bottom: 15px;
+	font-size: 21px;
+	font-weight: 400;
+	text-transform: uppercase;
+	cursor: pointer;
+}
+
+.btn-more-details {}
+
+.btn-add-to-card {
+	background-color: #558dc5;
+}
+
+.btn-add-to-card img {
+	margin-left: 12px;
 }
